--- a/client-mqtt/package.json
+++ b/client-mqtt/package.json
@@ -10,16 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.4",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@rneui/base": "^4.0.0-rc.3",
     "@rneui/themed": "^4.0.0-rc.3",
     "react": "17.0.2",
+    "react_native_mqtt": "^1.3.1",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react_native_mqtt": "^1.3.1"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
